# tap-technical-assessment

./: .gitignore  README.md  docker-compose.yml
client/: Dockerfile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  Layout.tsx  ProtectedRoute.tsx  Router.tsx  constants.ts  index.css  store.ts  theme.ts  types.ts  utils.ts
client/src/api/: base.ts  match.ts  ranking.ts  serializer.ts  team.ts
client/src/components/: ClearDatabase.tsx  DataTable.tsx  EditMatch.tsx  EditTeam.tsx  Logout.tsx  Notification.tsx
client/src/pages/: Home.tsx  Login.tsx  Matches.tsx  Rankings.tsx  Team.tsx  Teams.tsx
client/src/redux/: actions.ts  selectors.ts  slice.ts
client/src/redux/auth/: actions.ts  selectors.ts  slice.ts
client/src/redux/matches/: actions.ts  selectors.ts  slice.ts
client/src/redux/notifications/: actions.ts  selectors.ts  slice.ts
client/src/redux/rankings/: actions.ts  selectors.ts  slice.ts
client/src/redux/teams/: actions.ts  selectors.ts  slice.ts
database/: Dockerfile  postgresql.conf
server/: Dockerfile  README.md  app.py  constants.py  database.py  pyproject.toml  utils.py
server/database/: base.py  match.py  team.py  team_match.py  user.py
server/models/: database.py  route.py  web.py
server/service/: match.py  rank.py  team.py  user.py
