[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["jasonang0210 <jasonang@dsaid.gov.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pydantic = "^2.9.1"
sqlalchemy = "^2.0.34"
flask-cors = "^5.0.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
